// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-number Renders with all props provided 1`] = `
<form-control-number exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="age" part="label">
      Age
    </label>
    <input class="form-control is-invalid" disabled="" id="age" name="age" part="input input-invalid" type="number" value="25">
    <form-control-help-text>
      <small class="form-text text-muted" id="form-help-text-undefined">
        Enter your age
      </small>
    </form-control-help-text>
    <form-control-error-text>
      <small class="form-text text-danger" id="form-error-text-undefined">
        Invalid age
      </small>
    </form-control-error-text>
  </div>
</form-control-number>
`;

exports[`form-control-number Renders with default props 1`] = `
<form-control-number exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="age" part="label">
      Age
    </label>
    <input class="form-control" id="age" name="age" part="input undefined" type="number" value="">
    <form-control-help-text></form-control-help-text>
    <form-control-error-text></form-control-error-text>
  </div>
</form-control-number>
`;
